--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll-trigger" href="index.html" alt=""><img src="img/logo.jpg"></a>
+      <a class="navbar-brand js-scroll-trigger" href="index.html" alt=""><img src="img/logo.png"></a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
         data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
         aria-label="Toggle navigation">
@@ -48,7 +48,7 @@
               <a class="dropdown-item js-scroll-trigger" href="tomatisbambini.html">TOMATIS per bambini</a>
             </div>
           </li>
-          <li class="nav-item"><a class="nav-link js-scroll-trigger" href="bimbincanto.html">Incantabimbi</a></li>
+          <li class="nav-item"><a class="nav-link js-scroll-trigger" href="incantabimbi.html">InCantabimbi</a></li>
           <li class="nav-item"><a class="nav-link js-scroll-trigger" href="contatti.html">Contatti</a></li>
         </ul>
       </div>
@@ -74,7 +74,7 @@
         </div>
         <div class="row">
           <div class="col-md-12">
-            <h2 class="section-heading text-uppercase center">Armonizza la tua vita. Ascoltala.</h2>
+            <h2 class="section-heading center">Armonizza la tua vita. Ascoltala.</h2>
             <h2 class="section-heading text-uppercase center"></h2>
           </div>
         </div>
@@ -90,15 +90,12 @@
       <div class="row">
         <div class="col-md-2 text center"></div>
         <div class="col-md-8">
-          <p class="testi">Siamo Chiara e Graziella, operatrici di Nati per la Musica, il nostro obiettivo è quello della promozione e accompagnamento dello sviluppo dalla vita intrauterina ai primi anni di vita del bambino (0/6 anni) attraverso il suono e la musica.<br/>
-         Riteniamo che accostare il bambino alla musica fin dai primi periodi della vita è un'opportunità fondamentale di sviluppo della persona intesa nella sua globalità e favorisce lo sviluppo di quella sensibilità al suono e alla musica che è premessa alla maturazione della ”intelligenza musicale”.<br/>
-         La musica deve essere un patrimonio di tutti gli individui, specie se in tenera età, indipendentemente dalle singole attitudini, capacità o stato sociale.
-         Le nostre azioni, sostenute e accreditate dal programma Nati per la Musica, sono dirette verso: <br/>
-         &ndash; l’informazione e la sensibilizzare dei genitori, famiglie, operatori e terapisti sanitari ed educativi sull'importanza dell'espressione della pratica sonoro/musicale<br/>
-         &ndash; ampliare le competenze degli educatori e degli insegnanti attraverso seminari/formazioni, rispetto alle metodologie delle pratiche sonoro-musicali nelle scuole finalizzate alla musica in famiglia<br/>
-         &ndash; avvicinare, sostenere e promuovere nei bambini e nei loro genitori un ascolto attivo e ricettivo di più generi e stili musicali attraverso esperienze ludico-pratiche, fin dallo stadio prenatale e nelle prime fasce d’età<br/>
-         &ndash; accompagnare e sostenere lo sviluppo sonoro e comunicativo di bambini con disabilità e le loro famiglie<br/>
-        </p>          
+          <p class="testi">Chiocciole sonore è la realtà nata per unire tutte le cose in cui crediamo in un unico posto dove trovano spazio il benessere della persona, l’ascolto, la musica, i suoni, l’ascolto e la narrazione. <br>
+            <br>
+            Partendo dagli interventi in gravidanza, accompagnando lo sviluppo evolutivo del bambino, sostenendo la genitorialità, usiamo la narrazione e la musica dal vivo per far sperimentare a bambini e genitori emozioni e ascolto.<br>
+            <br>
+            Nel nostro cammino abbiamo fatto dei percorsi diversi ma condividiamo..... 
+          </p>          
         </div>
         <div class="col-md-2"></div>
       </div>
@@ -114,25 +111,19 @@
           <p>@ 2022 Chiocciole Sonore</p>
           <p><a href="">Privacy Policy</a></p>
         </div>
+        <div class="col-md-4">chiocciolesonore@gmail.com</div>
         <div class="col-md-4">
-          <a href="">mailtest@gmail.com</a>
-        </div>
-        <div class="col-md-4">
-          <a href=""><img src="img/fb.png" alt=""></a>
-          <a href=""><img src="img/lk.png" alt=""></a>
-          <a href="newsletter.html">
-            <p>Newsletter</p>
-          </a>
-          <a href="contatti.html">
-            <p>Contatti</p>
+          <p>
+            <a href=""><img src="img/fb.png" alt=""></a>
+           <a href=""><img src="img/in.png" alt=""></a>
+          </p>
+           <p><a href="newsletter.html">Newsletter</a></p>
+            <p><a href="contatti.html">Contatti</a></p>
           </a>
         </div>
       </div>
     </div>
   </section>
-
-
-
 
 
   <!--  //Script-->
