--- a/incantabimbi.html
+++ b/incantabimbi.html
@@ -3,7 +3,7 @@
  <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Newsletter</title>
+  <title>InCantabimbi</title>
   <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
   <!-- Font Awesome icons (free version)-->
   <script src="https://use.fontawesome.com/releases/v5.15.1/js/all.js" crossorigin="anonymous"></script>
@@ -61,7 +61,7 @@
             </div>
             <div class="row">
                 <div class="col-md-12">
-                    <h2 class="section-heading center">Newsletter</h2>
+                    <h2 class="section-heading center">InCantabimbi</h2>
                     <h2 class="section-heading text-uppercase center"></h2>
                 </div>
             </div>
@@ -71,50 +71,28 @@
 <hr>
 
 <section class="page-section" id="bimbincanto">
+
     <div class="container">
         <div class="row">
             <div class="col-md-2"></div>
             <div class="col-md-8">
-                <h2><p class="testi"></p></h2>
-            </div>
-            <div class="col-md-2"></div>
-        </div>
-        <div class="row">
-            <div class="col-md-2"></div>
-            <div class="col-md-8">
-                <form id="newLetterForm" name="sentMessage" novalidate="novalidate" action="">
-                    <div class="row align-items-stretch mb-5">
-                        <div class="col-md-6">
-                            <div class="form-group">
-                                <input class="form-control" id="name" type="text" placeholder="Your Name *" required="required" data-validation-required-message="Please enter your name." />
-                                <p class="help-block text-danger"></p>
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="form-group">
-                                <input class="form-control" id="name" type="text" placeholder="Your Surname *" required="required" data-validation-required-message="Please enter your surname." />
-                                <p class="help-block text-danger"></p>
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="form-group">
-                                <input class="form-control" id="email" type="email" placeholder="Your Email *" required="required" data-validation-required-message="Please enter your email address." />
-                                <p class="help-block text-danger"></p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-12">
-                            <p> 
-                                <input type="checkbox" id="authData" name="authData" value="1" aria-invalid="false"  onclick="terms_changed(this)"> <label for="authData"> Ho letto e approvo l'informativa sulla <a href="">privacy</a></label><br>
-                            </p>
-                        </div>
-                    </div>
-                    <div class="text-right">
-                            <div id="success"></div>
-                            <button class="btn btn-primary btn-xl text-uppercase" id="sendMessageButton" type="submit" disabled>Mi iscrivo!</button>
-                    </div>
-                 </form>
+                <p class="testi">
+                    <p class="section-heading"><b>PRESENTAZIONE:</b></p><br>
+                    Il gruppo InCantabimbi nasce dall’incontro tra musica, didattica, pedagogia, ricerca scientifica dedicata alla prima infanzia ed ha come obiettivo lo sviluppo globale e la crescita gioiosa dei bambini attraverso l’ascolto e la pratica musicale. <br>
+                    Le componenti del gruppo sono cinque e sono musiciste professioniste polistrumentiste,  cantanti di diversi stili e generi musicali, specializzate nell’ educazione musicale per la prima infanzia. La peculiarità del gruppo sta nell’elaborare e restituire, secondo le esigenze evolutive dei bambini, un progetto finale duttile ed adattabile al pubblico e agli spazi.<br>
+                    Durante il concerto interattivo i bambini ascolteranno differenti possibilità sonore e timbriche degli strumenti musicali, canteranno con le musiciste ed i loro genitori, apprendendo diversi stili, generi e modi musicali.<br>
+                    Attraverso la contestualizzazione narrativa il bambino diventa protagonista dello spettacolo, contribuendo attivamente allo svolgimento dell’azione musicale. Il concerto diviene quindi un evento musicale dalla natura multiforme: da performance a momento didattico attraverso l’interazione e la condivisione creativa <br>
+                    <br>               
+                    <p class="section-heading"><b>MODALIT&#193; DI ATTUAZIONE:</b></p><br>
+                    Fino ad ora abbiamo pensato, progettato creato e messo in scena:<br>
+                    &#8220;Il Flauto Magico e una valigia piena di sogni&#8221; liberamente ispirato alle musiche de &#8220;Il Flauto Magico&#8221; W.A Mozart<br>
+                    &#8220;Il mio primo Barbiere&#8221; liberamente ispirato alle musiche del Barbiere di Siviglia di G. Rossini<br>
+                    &#8220;Il mio primo Elisir&#8221; liberamente ispirato alle musiche de &#8220;L’Elisir d’amore&#8221; di G.Donizetti<br>
+                    &#8220;DanteBiberon&#8221; ispirato alla Divina Commedia di Dante con musiche tratte dal repertorio classico, jazz e popolare.<br>
+                    I piccoli e i grandi spettatori saranno trasportati e accompagnati tra le note delle arie e melodie di una delle più famose opere dell’opera musicale italiana.<br>
+                    Il fondamento didattico che accomuna tutte le proposte musicali ha le sue radici nella teoria dell’apprendimento musicale di E. Gordon, specifica per la prima infanzia.<br>
+                    Il pubblico sarà coinvolto ed invitato a partecipare con attività di ascolto, movimento, canto, intonazione di pattern melodici e ritmici. </p>
+
             </div>
             <div class="col-md-2"></div>
         </div>
@@ -124,25 +102,25 @@
 
   <hr>
   <section class="footer" id ="footer">
-   <div class="container">
-    <div class="row">
-     <div class="col-md-4">
-      <p>© 2022 Chiocciole Sonore</p>
-      <p><a href="">Privacy Policy</a></p>
-     </div>
-     <div class="col-md-4">chiocciolesonore@gmail.com</div>
-     <div class="col-md-4">
-        <p>
-          <a href=""><img src="img/fb.png" alt=""></a>
-         <a href=""><img src="img/in.png" alt=""></a>
-        </p>
-         <p><a href="newsletter.html">Newsletter</a></p>
-          <p><a href="contatti.html">Contatti</a></p>
-        </a>
+    <div class="container">
+     <div class="row">
+      <div class="col-md-4">
+       <p>© 2022 Chiocciole Sonore</p>
+       <p><a href="">Privacy Policy</a></p>
       </div>
-    </div>
-   </div>  
-  </section>
+      <div class="col-md-4">chiocciolesonore@gmail.com</div>
+      <div class="col-md-4">
+       <p>
+         <a href=""><img src="img/fb.png" alt=""></a>
+        <a href=""><img src="img/in.png" alt=""></a>
+       </p>
+        <p><a href="newsletter.html">Newsletter</a></p>
+         <p><a href="contatti.html">Contatti</a></p>
+       </a>
+     </div>
+     </div>
+    </div>  
+   </section>
 
 
 
