--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll-trigger" href="index.html" alt=""><img src="img/logo.jpg"></a>
+      <a class="navbar-brand js-scroll-trigger" href="index.html" alt=""><img src="img/logo.png"></a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
         data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
         aria-label="Toggle navigation">
@@ -48,7 +48,7 @@
               <a class="dropdown-item js-scroll-trigger" href="tomatisbambini.html">TOMATIS per bambini</a>
             </div>
           </li>
-          <li class="nav-item"><a class="nav-link js-scroll-trigger" href="bimbincanto.html">Incantabimbi</a></li>
+          <li class="nav-item"><a class="nav-link js-scroll-trigger" href="incantabimbi.html">InCantabimbi</a></li>
           <li class="nav-item"><a class="nav-link js-scroll-trigger" href="contatti.html">Contatti</a></li>
         </ul>
       </div>
@@ -64,7 +64,7 @@
         </div>
         <div class="row">
           <div class="col-md-12">
-            <h2 class="section-heading text-uppercase center">Sei nel posto giusto, sei a casa</h2>
+            <h2 class="section-heading center">Sei nel posto giusto, sei a casa</h2>
             <h2 class="section-heading text-uppercase center"></h2>
           </div>
         </div>
@@ -73,13 +73,33 @@
   </header>
 
   <hr>
-  
+
   <section class="" id="contenuti">
     <div class="container">
       <div class="row">
         <div class="col-md-2 testi"></div>
         <div class="col-md-8 testi">
-          <p></p>
+          <p class="testi">
+            Siamo Chiara e Graziella, due professioniste in ascolto della vita che parla .<br>
+            <br>
+            Passione, creatività e organizzazione sono le caratteristiche che più ci
+            legano. <br>
+            <br>
+            Ci occupiamo di educazione musicale, musicoterapia e formazione
+            creando dei percorsi che ti aiutano a vivere la musica in modo pratico,
+            creativo e consapevole.<br>
+            <br>
+            Offriamo delle possibilità non convenzionali di rieducazione e di
+            benessere alle persone che chiedono sostegno per la loro crescita.<br>
+            <br>
+            Perché non convenzionali? Perché usiamo la musica, l’ascolto e le
+            potenzialità del nostro orecchio per sviluppare una vita più serena e
+            ricca di possibilità.<br>
+            <br>
+            Possiamo aiutare anche te: conosciamoci meglio (<a href="about.html">chi siamo)</a>,
+            i nostri progetti <a href="natiperlamusica.html">Nati per la Musica</a>), metodica
+            <a href="">Tomatis</a> e <a href="bimbincanto.html">Incantabimbi.</a> 
+          </p>
         </div>
         <div class="col-md-2 testi"></div>
       </div>
@@ -93,17 +113,14 @@
           <p>© 2022 Chiocciole Sonore</p>
           <p><a href="">Privacy Policy</a></p>
         </div>
+        <div class="col-md-4">chiocciolesonore@gmail.com</div>
         <div class="col-md-4">
-          <a href="">mailtest@gmail.com</a>
-        </div>
-        <div class="col-md-4">
-          <a href=""><img src="img/fb.png" alt=""></a>
-          <a href=""><img src="img/lk.png" alt=""></a>
-          <a href="newsletter.html">
-            <p>Newsletter</p>
-          </a>
-          <a href="">
-            <p>Contatti</p>
+          <p>
+            <a href=""><img src="img/fb.png" alt=""></a>
+           <a href=""><img src="img/in.png" alt=""></a>
+          </p>
+           <p><a href="newsletter.html">Newsletter</a></p>
+            <p><a href="contatti.html">Contatti</a></p>
           </a>
         </div>
       </div>
