--- a/natiperlamusica.html
+++ b/natiperlamusica.html
@@ -19,7 +19,7 @@
  <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
    <div class="container">
-    <a class="navbar-brand js-scroll-trigger" href="index.html" alt=""><img src='img/logo.jpg'></a>
+    <a class="navbar-brand js-scroll-trigger" href="index.html" alt=""><img src='img/logo.png'></a>
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
      Menu
      <i class="fas fa-bars ml-1"></i>
@@ -45,7 +45,7 @@
         <a class="dropdown-item js-scroll-trigger" href="tomatisbambini.html">TOMATIS per bambini</a>
        </div>
       </li>
-      <li class="nav-item"><a class="nav-link js-scroll-trigger" href="bimbincanto.html">Incantabimbi</a></li>
+      <li class="nav-item"><a class="nav-link js-scroll-trigger" href="incantabimbi.html">InCantabimbi</a></li>
       <li class="nav-item"><a class="nav-link js-scroll-trigger" href="contatti.html">Contatti</a></li>
      </ul>
     </div>
@@ -61,7 +61,7 @@
             </div>
             <div class="row">
                 <div class="col-md-12">
-                    <h2 class="section-heading text-uppercase center">NATI PER LA MUSICA</h2>
+                    <h2 class="section-heading center">Nati per la musica</h2>
                     <h2 class="section-heading text-uppercase center"></h2>
                 </div>
             </div>
@@ -76,16 +76,28 @@
         <div class="row">
             <div class="col-md-2"></div>
             <div class="col-md-8">
-              <p class="testi">Nati per la Musica promuove l'esperienza musicale in famiglia come strumento di relazione, già durante la gravidanza, per uno sviluppo migliore del bambino nelle prime epoche della vita.<br/>
-                Il Programma è promosso dall'Associazione Culturale Pediatri e dal Centro per la Salute del Bambino ed è attivo su tutto il territorio nazionale grazie alle reti regionali di operatori, che coordinano e promuovono diverse iniziative locali per bambini in età prescolare e le loro famiglie.<br/>
-                <h3>La musica fa bene</h3>
-                Le ricerche scientifiche dimostrano che le esperienze nei primi anni di vita sono fondamentali per un ottimale sviluppo complessivo delle bambine e dei bambini. La musica è una buona pratica che, se attuata precocemente e con continuità, sostiene la crescita dei bambini.<br/>
-                Dal punto di vista cognitivo, la musica aiuta il bambino a sviluppare proprie capacità di ascolto e osservazione, ad accrescere la propria immaginazione e creatività, ad aumentare le capacità di concentrazione e attenzione e ad esercitare la memoria.<br/>
-                A livello relazionale ascoltare e fare musica in famiglia, giocando con la voce, con gli oggetti quotidiani che producono suoni, cantare filastrocche e inventarne di nuove rafforza il legame affettivo tra adulto e bambino ed è fonte di benessere.<br/>
-                <h3>Fare musica, insieme</h3>
-                Il ruolo dei genitori è cruciale nel percorso di avvicinamento e scoperta della musica e dei suoni.
-
-Un ambiente familiare musicalmente stimolante, dove i genitori propongono ai bambini di giocare con la voce e con i suoni, rafforza il legame affettivo all’interno della famiglia ed è terreno favorevole nel quale si possono sviluppare le esperienze musicali successive.
+              <p class="testi">
+                <h3 class="section-heading">Insieme per NATI PER LA MUSICA</h3><br>
+                Nati per la Musica promuove l'esperienza musicale in famiglia come strumento di relazione, già durante la gravidanza, per uno sviluppo migliore del bambino nelle prime epoche della vita.<br>
+                <br>
+                Il Programma è promosso dall'Associazione Culturale Pediatri e dal Centro per la Salute del Bambino ed è attivo su tutto il territorio nazionale grazie alle reti regionali di operatori, che coordinano e promuovono diverse iniziative locali per bambini in età prescolare e le loro famiglie.<br>
+                <br>
+                <h3 class="section-heading">La musica fa bene</h3><br>
+                Le ricerche scientifiche dimostrano che le esperienze nei primi anni di vita sono fondamentali per un ottimale sviluppo complessivo delle bambine e dei bambini. La musica è una buona pratica che, se attuata precocemente e con continuità, sostiene la crescita dei bambini.<br>
+                <br>
+                Dal punto di vista cognitivo, la musica aiuta il bambino a sviluppare proprie capacità di ascolto e osservazione, ad accrescere la propria immaginazione e creatività, ad aumentare le capacità di concentrazione e attenzione e ad esercitare la memoria.<br>
+                <br>
+                A livello relazionale ascoltare e fare musica in famiglia, giocando con la voce, con gli oggetti quotidiani che producono suoni, cantare filastrocche e inventarne di nuove rafforza il legame affettivo tra adulto e bambino ed è fonte di benessere.<br>
+                <br>
+                <h3 class="section-heading">Fare musica, insieme</h3><br>
+                Il ruolo dei genitori è cruciale nel percorso di avvicinamento e scoperta della musica e dei suoni.<br>
+                <br>
+                Un ambiente familiare musicalmente stimolante, dove i genitori propongono ai bambini di giocare con la voce e con i suoni, rafforza il legame affettivo all’interno della famiglia ed è terreno favorevole nel quale si possono sviluppare le esperienze musicali successive.<br>
+                <br>
+                <h3 class="section-heading">Laboratori accreditati da nati per la Musica:</h3><br>
+                
+                Musica in Grembo, Storie di suoni Ascoltare per crescere……
+                
 
               </p>
             </div>
@@ -103,15 +115,16 @@ Un ambiente familiare musicalmente stimolante, dove i genitori propongono ai bam
       <p>© 2022 Chiocciole Sonore</p>
       <p><a href="">Privacy Policy</a></p>
      </div>
+     <div class="col-md-4">chiocciolesonore@gmail.com</div>
      <div class="col-md-4">
-      <a href="">mailtest@gmail.com</a>
-     </div>
-     <div class="col-md-4">
-      <a href=""><img src="img/fb.png" alt=""></a>
-      <a href=""><img src="img/lk.png" alt=""></a>
-      <a href="newsletter.html"><p>Newsletter</p></a>
-      <a href=""><p>Contatti</p></a>
-     </div>
+        <p>
+          <a href=""><img src="img/fb.png" alt=""></a>
+         <a href=""><img src="img/in.png" alt=""></a>
+        </p>
+         <p><a href="newsletter.html">Newsletter</a></p>
+          <p><a href="contatti.html">Contatti</a></p>
+        </a>
+      </div>
     </div>
    </div>  
   </section>
