--- a/tomatisbambini.html
+++ b/tomatisbambini.html
@@ -46,7 +46,7 @@
         <a class="dropdown-item js-scroll-trigger" href="tomatisbambini.html">TOMATIS per bambini</a>
        </div>
       </li>
-      <li class="nav-item"><a class="nav-link js-scroll-trigger" href="bimbincanto.html">Incantabimbi</a></li>
+      <li class="nav-item"><a class="nav-link js-scroll-trigger" href="incantabimbi.html">InCantabimbi</a></li>
       <li class="nav-item"><a class="nav-link js-scroll-trigger" href="contatti.html">Contatti</a></li>
      </ul>
     </div>
@@ -64,8 +64,8 @@
         </div>
         <div class="row">
           <div class="col-md-12">
-      <h2 class="section-heading text-uppercase">Tomatis per bambini</h2>
-      <h2 class="section-heading text-uppercase"></h2>
+              <h2 class="section-heading center">Tomatis per bambini</h2>
+              <h2 class="section-heading text-uppercase"></h2>
     </div>
   </div>
  </div>    
@@ -119,11 +119,9 @@
     </div>
     <div class="row">
      <div class="col-md-2"></div>
-     <div class="col-md-8"><h3 class="section-heading">Tempi e prezzi</h3>
-      <p class="testi">Le sedute sono suddivise in cicli intensivi: ogni ciclo dura 10/12 giorni, 2
-       ore al giorno. Sono necessari due o tre cicli di solito: tra un ciclo e
+     <div class="col-md-8"><h3 class="section-heading">Tempi</h3>
+      <p class="testi">Le sedute sono suddivise in cicli intensivi: ogni ciclo dura 10/12 giorni. Sono necessari due o tre cicli di solito: tra un ciclo e
        l’altro c’è una pausa di 5 settimane.</p>
-      <p class="testi">Ogni seduta ha un costo di 40 euro .</p>
       <p class="testi">CTA: Scrivimi per prenotare il tuo colloquio conoscitivo!
        form di contatto</p>
      </div>
@@ -140,15 +138,16 @@
       <p>© 2022 Chiocciole Sonore</p>
       <p><a href="">Privacy Policy</a></p>
      </div>
+     <div class="col-md-4">chiocciolesonore@gmail.com</div>
      <div class="col-md-4">
-      <a href="">mailtest@gmail.com</a>
-     </div>
-     <div class="col-md-4">
-      <a href=""><img src="img/fb.png" alt=""></a>
-      <a href=""><img src="img/lk.png" alt=""></a>
-      <a href="newsletter.html"><p>Newsletter</p></a>
-      <a href=""><p>Contatti</p></a>
-     </div>
+      <p>
+        <a href=""><img src="img/fb.png" alt=""></a>
+       <a href=""><img src="img/in.png" alt=""></a>
+      </p>
+       <p><a href="newsletter.html">Newsletter</a></p>
+        <p><a href="contatti.html">Contatti</a></p>
+      </a>
+    </div>
     </div>
    </div>  
   </section>
