--- a/ascoltarecrescere.html
+++ b/ascoltarecrescere.html
@@ -21,7 +21,7 @@
 <body id="page-top">
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
         <div class="container">
-            <a class="navbar-brand js-scroll-trigger" href="index.html" alt=""><img src='img/logo.jpg'></a>
+            <a class="navbar-brand js-scroll-trigger" href="index.html" alt=""><img src='img/logo.png'></a>
             <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
                 data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -51,7 +51,7 @@
                                 bambini</a>
                         </div>
                     </li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="bimbincanto.html">Incantabimbi</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="incantabimbi.html">InCantabimbi</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="contatti.html">Contatti</a></li>
                 </ul>
             </div>
@@ -67,7 +67,7 @@
                 </div>
                 <div class="row">
                     <div class="col-md-12">
-                        <h2 class="section-heading text-uppercase center">ASCOLTARE PER CRESCERE</h2>
+                        <h2 class="section-heading center">Ascoltare per crescere</h2>
                         <h2 class="section-heading text-uppercase center"></h2>
                     </div>
                 </div>
@@ -81,7 +81,18 @@
             <div class="row">
                 <div class="col-md-2"></div>
                 <div class="col-md-8">
-                    <h2><h2><p class="testi"></p></h2>
+                    <p class="testi">
+                        Laboratori di suoni, musica e movimento. (inserire metodologia??)<br>
+                        <br> 
+                        Il laboratorio per piccoli e piccolissimi punta a  sviluppare le naturali potenzialità innate del bambino, fin dalla più tenera età. 
+                        Tutto parte dall’ascolto, che  verrà usato come canale preferenziale con il bambino  per instaurare una comunicazione musicale. 
+                        Attraverso  il movimento spontaneo e la voce, la musica si avvicina  ai più piccoli rispettandone i tempi di apprendimento.<br>
+                        <br> 
+                        Un percorso rivolto ai bambini di età 0-6 anni ma pensato per le famiglie, che desiderano donare armonia ed equilibrio ai propri figli durante le delicate fasi di crescita e soprattutto nei primi anni.<br>
+                        <br>
+                        CTA:
+                        
+                    </p>
                 </div>
                 <div class="col-md-2"></div>
             </div>
@@ -97,19 +108,16 @@
                     <p>© 2022 Chiocciole Sonore</p>
                     <p><a href="">Privacy Policy</a></p>
                 </div>
+                <div class="col-md-4">chiocciolesonore@gmail.com</div>
                 <div class="col-md-4">
-                    <a href="">mailtest@gmail.com</a>
-                </div>
-                <div class="col-md-4">
-                    <a href=""><img src="img/fb.png" alt=""></a>
-                    <a href=""><img src="img/lk.png" alt=""></a>
-                    <a href="newsletter.html">
-                        <p>Newsletter</p>
+                    <p>
+                      <a href=""><img src="img/fb.png" alt=""></a>
+                     <a href=""><img src="img/in.png" alt=""></a>
+                    </p>
+                     <p><a href="newsletter.html">Newsletter</a></p>
+                      <p><a href="contatti.html">Contatti</a></p>
                     </a>
-                    <a href="">
-                        <p>Contatti</p>
-                    </a>
-                </div>
+                  </div>
             </div>
         </div>
     </section>
