--- a/grembosonoro.html
+++ b/grembosonoro.html
@@ -21,7 +21,7 @@
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll-trigger" href="index.html" alt=""><img src='img/logo.jpg'></a>
+      <a class="navbar-brand js-scroll-trigger" href="index.html" alt=""><img src='img/logo.png'></a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
         data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
         aria-label="Toggle navigation">
@@ -50,7 +50,7 @@
               <a class="dropdown-item js-scroll-trigger" href="tomatisbambini.html">TOMATIS per bambini</a>
             </div>
           </li>
-          <li class="nav-item"><a class="nav-link js-scroll-trigger" href="bimbincanto.html">Incantabimbi</a></li>
+          <li class="nav-item"><a class="nav-link js-scroll-trigger" href="incantabimbi.html">InCantabimbi</a></li>
           <li class="nav-item"><a class="nav-link js-scroll-trigger" href="contatti.html">Contatti</a></li>
         </ul>
       </div>
@@ -66,7 +66,7 @@
         </div>
         <div class="row">
           <div class="col-md-12">
-            <h2 class="section-heading text-uppercase center">Grembo sonoro</h2>
+            <h2 class="section-heading center">Grembo sonoro</h2>
             <h2 class="section-heading text-uppercase center"><h2>
           </div>
         </div>
@@ -139,14 +139,12 @@
       <div class="row">
         <div class="col-md-2"></div>
         <div class="col-md-8">
-          <h3 class="section-heading">Tempi e costi</h3>
+          <h3 class="section-heading">Tempi</h3>
           <p class="testi">Quando inizia il corso propongo un colloquio individuale e in alcuni casi
             un test d’ascolto.</p>
           <p class="testi">Le sedute sono individuali o per gruppi di 4/6 donne a partire dal 5°
-            mese di gestazione. Ci incontriamo 2 volte a settimana, ogni seduta
-            dura un'ora e mezza.</p>
-          <p class="testi">Un pacchetto di 8 sedute costa <b>80 euro</b>.
-            CTA: Inizia questo splendido percorso a due con la tua creatura.</p>
+            mese di gestazione. Ci incontriamo 1 volta a settimana.</p>
+          <p class="testi">CTA: Inizia questo splendido percorso a due con la tua creatura.</p>
         </div>
         <div class="col-md-2"></div>
       </div>
@@ -162,17 +160,14 @@
           <p>@ 2022 Chiocciole Sonore</p>
           <p><a href="">Privacy Policy</a></p>
         </div>
+        <div class="col-md-4">chiocciolesonore@gmail.com</div>
         <div class="col-md-4">
-          <a href="">mailtest@gmail.com</a>
-        </div>
-        <div class="col-md-4">
-          <a href=""><img src="img/fb.png" alt=""></a>
-          <a href=""><img src="img/lk.png" alt=""></a>
-          <a href="newsletter.html">
-            <p>Newsletter</p>
-          </a>
-          <a href="">
-            <p>Contatti</p>
+          <p>
+            <a href=""><img src="img/fb.png" alt=""></a>
+           <a href=""><img src="img/in.png" alt=""></a>
+          </p>
+           <p><a href="newsletter.html">Newsletter</a></p>
+            <p><a href="contatti.html">Contatti</a></p>
           </a>
         </div>
       </div>
