--- a/storiesuoni.html
+++ b/storiesuoni.html
@@ -21,7 +21,7 @@
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll-trigger" href="index.html" alt=""><img src='img/logo.jpg'></a>
+      <a class="navbar-brand js-scroll-trigger" href="index.html" alt=""><img src='img/logo.png'></a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
         data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
         aria-label="Toggle navigation">
@@ -50,7 +50,7 @@
               <a class="dropdown-item js-scroll-trigger" href="tomatisbambini.html">TOMATIS per bambini</a>
             </div>
           </li>
-          <li class="nav-item"><a class="nav-link js-scroll-trigger" href="bimbincanto.html">Incantabimbi</a></li>
+          <li class="nav-item"><a class="nav-link js-scroll-trigger" href="incantabimbi.html">InCantabimbi</a></li>
           <li class="nav-item"><a class="nav-link js-scroll-trigger" href="contatti.html">Contatti</a></li>
         </ul>
       </div>
@@ -67,7 +67,7 @@
         </div>
         <div class="row">
           <div class="col-md-12">
-            <h2 class="section-heading text-uppercase">Storie di suoni</h2>
+            <h2 class="section-heading center">Storie di suoni</h2>
             <h2 class="section-heading text-uppercase"></h2>
           </div>
         </div>
@@ -108,9 +108,7 @@
             parte al processo evolutivo in una dimensione creativa e di ascolto.</p>
           <p class="testi">Bastano una storia e degli oggetti semplici per catturare
             immediatamente l’attenzione dei piccoli.</p>
-          <p class="testi">Il laboratorio dura un’ora e mezza e costa 8 euro a persona .
-            I gruppi sono di massimo 10 bambini + 10 adulti.
-            La prossima data del laboratorio è ----</p>
+          <p class="testi">Il laboratorio dura un’ora. I gruppi sono di massimo 7 bambini.</p>
         </div>
         <div class="col-md-2"></div>
       </div>
@@ -125,17 +123,14 @@
           <p>© 2022 Chiocciole Sonore</p>
           <p><a href="">Privacy Policy</a></p>
         </div>
+        <div class="col-md-4">chiocciolesonore@gmail.com</div>
         <div class="col-md-4">
-          <a href="">mailtest@gmail.com</a>
-        </div>
-        <div class="col-md-4">
-          <a href=""><img src="img/fb.png" alt=""></a>
-          <a href=""><img src="img/lk.png" alt=""></a>
-          <a href="newsletter.html">
-            <p>Newsletter</p>
-          </a>
-          <a href="">
-            <p>Contatti</p>
+          <p>
+            <a href=""><img src="img/fb.png" alt=""></a>
+           <a href=""><img src="img/in.png" alt=""></a>
+          </p>
+           <p><a href="newsletter.html">Newsletter</a></p>
+            <p><a href="contatti.html">Contatti</a></p>
           </a>
         </div>
       </div>
