--- a/ascoltarecrescere.html
+++ b/ascoltarecrescere.html
@@ -28,33 +28,31 @@
                 Menu
                 <i class="fas fa-bars ml-1"></i>
             </button>
-            <div class="collapse navbar-collapse" id="navbarResponsive">
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="about.html">Chi Siamo</a></li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="servizi.html" id="navbardrop" data-toggle="dropdown">Nati per la musica</a>
-                        <div class="dropdown-menu">
-                            <a class="dropdown-item js-scroll-trigger" href="natiperlamusica.html">Nati per la musica</a>
-                            <a class="dropdown-item js-scroll-trigger" href="grembosonoro.html">Grembo sonoro</a>
-                            <a class="dropdown-item js-scroll-trigger" href="storiesuoni.html">Storie di suoni</a>
-                            <a class="dropdown-item js-scroll-trigger" href="ascolto.html">Ascolto e mindfulness</a>
-                            <a class="dropdown-item js-scroll-trigger" href="ascoltarecrescere.html">Ascoltare per crescere</a>
-                        </div>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="tomatis.html" id="navbardrop"
-                            data-toggle="dropdown">Tomatis</a>
-
-                        <div class="dropdown-menu">
-                            <a class="dropdown-item js-scroll-trigger" href="metodotomatis.html">Metodo TOMATIS</a>
-                            <a class="dropdown-item js-scroll-trigger" href="tomatisbambini.html">TOMATIS per
-                                bambini</a>
-                        </div>
-                    </li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="incantabimbi.html">InCantabimbi</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="contatti.html">Contatti</a></li>
-                </ul>
-            </div>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item"><a class="nav-link js-scroll-trigger" href="about.html">Chi Siamo</a></li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="tomatis.html" id="navbardrop" data-toggle="dropdown">Tomatis</a>
+              <div class="dropdown-menu">
+                <a class="dropdown-item js-scroll-trigger" href="metodotomatis.html">Metodica TOMATIS</a>
+                <a class="dropdown-item js-scroll-trigger" href="tomatisbambini.html">TOMATIS per bambini</a>
+              </div>
+            </li>
+            <li class="nav-item"><a class="nav-link js-scroll-trigger" href="incantabimbi.html">InCantabimbi</a></li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">Nati per la musica</a>
+              <div class="dropdown-menu">
+                <a class="dropdown-item js-scroll-trigger" href="natiperlamusica.html">Nati per la musica</a>
+                <a class="dropdown-item js-scroll-trigger" href="ascoltarecrescere.html">Ascoltare per crescere</a>
+                <a class="dropdown-item js-scroll-trigger" href="grembosonoro.html">Grembo sonoro</a>
+                <a class="dropdown-item js-scroll-trigger" href="storiesuoni.html">Storie di suoni</a>
+                <a class="dropdown-item js-scroll-trigger" href="ascolto.html">Ascolto e mindfulness</a>
+              </div>
+            </li>
+            <li class="nav-item"><a class="nav-link js-scroll-trigger" href="contatti.html">Contatti</a></li>
+          </ul>
+        </div>
         </div>
     </nav>
 
@@ -82,16 +80,14 @@
                 <div class="col-md-2"></div>
                 <div class="col-md-8">
                     <p class="testi">
-                        Laboratori di suoni, musica e movimento. (inserire metodologia??)<br>
+                        Laboratori di suoni, musica e movimento.<br>
                         <br> 
                         Il laboratorio per piccoli e piccolissimi punta a  sviluppare le naturali potenzialità innate del bambino, fin dalla più tenera età. 
                         Tutto parte dall’ascolto, che  verrà usato come canale preferenziale con il bambino  per instaurare una comunicazione musicale. 
                         Attraverso  il movimento spontaneo e la voce, la musica si avvicina  ai più piccoli rispettandone i tempi di apprendimento.<br>
                         <br> 
                         Un percorso rivolto ai bambini di età 0-6 anni ma pensato per le famiglie, che desiderano donare armonia ed equilibrio ai propri figli durante le delicate fasi di crescita e soprattutto nei primi anni.<br>
-                        <br>
-                        CTA:
-                        
+                        CTA: scrivi per prenotare il tuo laboratorio.                        
                     </p>
                 </div>
                 <div class="col-md-2"></div>
@@ -112,7 +108,7 @@
                 <div class="col-md-4">
                     <p>
                       <a href=""><img src="img/fb.png" alt=""></a>
-                     <a href=""><img src="img/in.png" alt=""></a>
+                     <a href="https://instagram.com/chiocciolesonore_?utm_medium=copy_link"><img src="img/in.png" alt=""></a>
                     </p>
                      <p><a href="newsletter.html">Newsletter</a></p>
                       <p><a href="contatti.html">Contatti</a></p>
