--- a/incantabimbi.html
+++ b/incantabimbi.html
@@ -24,31 +24,31 @@
      Menu
      <i class="fas fa-bars ml-1"></i>
     </button>
-    <div class="collapse navbar-collapse" id="navbarResponsive">
-     <ul class="navbar-nav ml-auto">              
-      <li class="nav-item"><a class="nav-link js-scroll-trigger" href="about.html">Chi Siamo</a></li>                                      
-      <li class="nav-item dropdown">
-       <a class="nav-link dropdown-toggle" href="servizi.html" id="navbardrop" data-toggle="dropdown">Nati per la musica</a>
-       <div class="dropdown-menu">
+</button>
+<div class="collapse navbar-collapse" id="navbarResponsive">
+  <ul class="navbar-nav ml-auto">
+    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="about.html">Chi Siamo</a></li>
+    <li class="nav-item dropdown">
+      <a class="nav-link dropdown-toggle" href="tomatis.html" id="navbardrop" data-toggle="dropdown">Tomatis</a>
+      <div class="dropdown-menu">
+        <a class="dropdown-item js-scroll-trigger" href="metodotomatis.html">Metodica TOMATIS</a>
+        <a class="dropdown-item js-scroll-trigger" href="tomatisbambini.html">TOMATIS per bambini</a>
+      </div>
+    </li>
+    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="incantabimbi.html">InCantabimbi</a></li>
+    <li class="nav-item dropdown">
+      <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">Nati per la musica</a>
+      <div class="dropdown-menu">
         <a class="dropdown-item js-scroll-trigger" href="natiperlamusica.html">Nati per la musica</a>
+        <a class="dropdown-item js-scroll-trigger" href="ascoltarecrescere.html">Ascoltare per crescere</a>
         <a class="dropdown-item js-scroll-trigger" href="grembosonoro.html">Grembo sonoro</a>
         <a class="dropdown-item js-scroll-trigger" href="storiesuoni.html">Storie di suoni</a>
         <a class="dropdown-item js-scroll-trigger" href="ascolto.html">Ascolto e mindfulness</a>
-        <a class="dropdown-item js-scroll-trigger" href="ascoltarecrescere.html">Ascoltare per crescere</a>
-       </div>
-      </li>
-      <li class="nav-item dropdown">
-       <a class="nav-link dropdown-toggle" href="tomatis.html" id="navbardrop" data-toggle="dropdown">Tomatis</a>
-
-       <div class="dropdown-menu">
-        <a class="dropdown-item js-scroll-trigger" href="metodotomatis.html">Metodo TOMATIS</a>
-        <a class="dropdown-item js-scroll-trigger" href="tomatisbambini.html">TOMATIS per bambini</a>
-       </div>
-      </li>
-      <li class="nav-item"><a class="nav-link js-scroll-trigger" href="incantabimbi.html">InCantabimbi</a></li>
-      <li class="nav-item"><a class="nav-link js-scroll-trigger" href="contatti.html">Contatti</a></li>
-     </ul>
-    </div>
+      </div>
+    </li>
+    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="contatti.html">Contatti</a></li>
+  </ul>
+</div>
    </div>
   </nav>
 
@@ -112,7 +112,7 @@
       <div class="col-md-4">
        <p>
          <a href=""><img src="img/fb.png" alt=""></a>
-        <a href=""><img src="img/in.png" alt=""></a>
+        <a href="https://instagram.com/chiocciolesonore_?utm_medium=copy_link"><img src="img/in.png" alt=""></a>
        </p>
         <p><a href="newsletter.html">Newsletter</a></p>
          <p><a href="contatti.html">Contatti</a></p>
