--- a/index.html
+++ b/index.html
@@ -32,23 +32,23 @@
         <ul class="navbar-nav ml-auto">
           <li class="nav-item"><a class="nav-link js-scroll-trigger" href="about.html">Chi Siamo</a></li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">Nati per la musica</a>
-            <div class="dropdown-menu">
-              <a class="dropdown-item js-scroll-trigger" href="natiperlamusica.html">Nati per la musica</a>
-              <a class="dropdown-item js-scroll-trigger" href="grembosonoro.html">Grembo sonoro</a>
-              <a class="dropdown-item js-scroll-trigger" href="storiesuoni.html">Storie di suoni</a>
-              <a class="dropdown-item js-scroll-trigger" href="ascolto.html">Ascolto e mindfulness</a>
-              <a class="dropdown-item js-scroll-trigger" href="ascoltarecrescere.html">Ascoltare per crescere</a>
-            </div>
-          </li>
-          <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="tomatis.html" id="navbardrop" data-toggle="dropdown">Tomatis</a>
             <div class="dropdown-menu">
-              <a class="dropdown-item js-scroll-trigger" href="metodotomatis.html">Metodo TOMATIS</a>
+              <a class="dropdown-item js-scroll-trigger" href="metodotomatis.html">Metodica TOMATIS</a>
               <a class="dropdown-item js-scroll-trigger" href="tomatisbambini.html">TOMATIS per bambini</a>
             </div>
           </li>
           <li class="nav-item"><a class="nav-link js-scroll-trigger" href="incantabimbi.html">InCantabimbi</a></li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">Nati per la musica</a>
+            <div class="dropdown-menu">
+              <a class="dropdown-item js-scroll-trigger" href="natiperlamusica.html">Nati per la musica</a>
+              <a class="dropdown-item js-scroll-trigger" href="ascoltarecrescere.html">Ascoltare per crescere</a>
+              <a class="dropdown-item js-scroll-trigger" href="grembosonoro.html">Grembo sonoro</a>
+              <a class="dropdown-item js-scroll-trigger" href="storiesuoni.html">Storie di suoni</a>
+              <a class="dropdown-item js-scroll-trigger" href="ascolto.html">Ascolto e mindfulness</a>
+            </div>
+          </li>
           <li class="nav-item"><a class="nav-link js-scroll-trigger" href="contatti.html">Contatti</a></li>
         </ul>
       </div>
@@ -72,7 +72,7 @@
     </section>
   </header>
 
-  <hr>
+ <!-- <hr>-->
 
   <section class="" id="contenuti">
     <div class="container">
@@ -81,19 +81,16 @@
         <div class="col-md-8 testi">
           <p class="testi">
             Siamo Chiara e Graziella, due professioniste in ascolto della vita che parla .<br>
-            <br>
             Passione, creatività e organizzazione sono le caratteristiche che più ci
             legano. <br>
-            <br>
             Ci occupiamo di educazione musicale, musicoterapia e formazione
             creando dei percorsi che ti aiutano a vivere la musica in modo pratico,
             creativo e consapevole.<br>
             <br>
             Offriamo delle possibilità non convenzionali di rieducazione e di
             benessere alle persone che chiedono sostegno per la loro crescita.<br>
-            <br>
-            Perché non convenzionali? Perché usiamo la musica, l’ascolto e le
-            potenzialità del nostro orecchio per sviluppare una vita più serena e
+            Perché non convenzionali? Perché usiamo <b>la musica, l’ascolto e le
+            potenzialità del nostro orecchio</b> per sviluppare una vita più serena e
             ricca di possibilità.<br>
             <br>
             Possiamo aiutare anche te: conosciamoci meglio (<a href="about.html">chi siamo)</a>,
@@ -116,8 +113,8 @@
         <div class="col-md-4">chiocciolesonore@gmail.com</div>
         <div class="col-md-4">
           <p>
-            <a href=""><img src="img/fb.png" alt=""></a>
-           <a href=""><img src="img/in.png" alt=""></a>
+           <a href=""><img src="img/fb.png" alt=""></a>
+           <a href="https://instagram.com/chiocciolesonore_?utm_medium=copy_link"><img src="img/in.png" alt=""></a>
           </p>
            <p><a href="newsletter.html">Newsletter</a></p>
             <p><a href="contatti.html">Contatti</a></p>
